Tweaking the radar display

--- a/server/index.html
+++ b/server/index.html
@@ -237,6 +237,9 @@
                     <a href="https://transmitter.virtualflight.online" class="btn btn-outline-secondary">
                         <i class="fas fa-satellite-dish"></i> Transmitter
                     </a>
+                    <a href="https://patreon.com/virtualflightonline" class="btn btn-outline-secondary">
+                        <i class="fa-brands fa-patreon"></i> Patreon
+                    </a>
 
                 </div>
             </div>
@@ -248,7 +251,7 @@
                 Virtual Flight Online Transmitter
             </h5>
             <p class="mb-2"><strong>Bringing pilots together in virtual airspace</strong></p>
-            <p class="mb-0"><small>Built with ❤️ for the flight simulation community</small></p>
+            <p class="mb-0"><small>Built with ❤️ for the flight simulation community by <a href="https://jonbeckett.online">Jonathan Beckett</a></small></p>
         </div>
     </div>
 
